[project]
name = "memory_game_env-server"
version = "0.1.0"
description = "MCP server for memory_game_env environment"
requires-python = ">=3.11"
dependencies = [
    "hud-python>=0.4.54",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
